--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -57,7 +57,9 @@ repos:
         args:
           - -c
           - pyproject.toml
+          - --quiet
         additional_dependencies:
+          - bandit[toml]
           - toml
 
   - repo: https://github.com/pre-commit/mirrors-mypy
